# myScript

./: .gitignore  CMakeLists.txt  README.md  script.my
src/: interpreter.cpp  interpreter.h  main.cpp
